# pathtracer

./: .gitignore  CMakeLists.txt  README.md
reference/: CMakeLists.txt  README.md  integrators.h  math_types.h  scene.h  smallpt.cpp
smallpt/: CMakeLists.txt  README.md  smallpt.cpp
src/: buffers.h  checkers.h  color.h  custom_math.h  draw_solid_color.cu  image.h  launch_params.h  logger.h  main.cpp  module.h  renderer.cpp  renderer.h  sbt.h  scene.cpp  scene.h  shader_types.h  triangle.cu  types.h
